--- a/README
+++ b/README
@@ -1,1 +1,1 @@
-Espacio utilizado para agendar las soluciones que voy implementand en lo que tenga coneccion con el trabajo diario
+Espacio utilizado para agendar las soluciones diarias de un Admin ;-).
